--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
 <!--            <artifactId>jcabi-github</artifactId>-->
 <!--            <version>1.8.0</version>-->
 <!--        </dependency>-->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.3</version>
+        </dependency>
     </dependencies>
 
 </project>
